# sql_training

./: .gitignore  app.py  init_db.py  main.py  pyproject.toml  tests.py
.github/workflows/: check_code_quality.yml
data/: exercices_sql_tables.duckdb
data/solutions/: beverages_and_food.sql  sizes_and_trademarks.sql
