[project]
name = "sql-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "streamlit>=1.54.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["ALL"]
ignore = [
    "D100",  # docstring missing
    "T201",  # print
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
]
[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "ruff>=0.15.0",
]
